[package]
name = "token_bucket"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "token_bucket"

[dependencies]
env_logger = "0.10.0"
log = "0.4.20"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
concurrent-queue = "2.3.0"
tonic = "0.10.2"
prost = "0.12.1"

[build-dependencies]
prost-build = { version = "0.12.1" }