[package]
name = "token_bucket"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
env_logger = "0.10.0"
log = "0.4.20"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
concurrent-queue = "2.3.0"
tonic = "0.10.2"
prost = "0.12.1"

[dependencies.uuid]
version = "1.5.0"
features = ["v4", "fast-rng"]

[build-dependencies]
tonic-build = "0.10.2"
