[package]
name = "authorization"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "authorization"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
log = "0.4.0"
env_logger = "0.10.0"

[dev-dependencies]
reqwest = { version = "0.11.17", features = ["json"] }
