[package]
name = "sliding_window_counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.20"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
futures = "0.3"
actix-web = "4.4.0"
